# First-Follow-Prediction-Sets

./: .gitignore  CMakeLists.txt
include/: Common.h  First.h  Following.h  PredictionSet.h  Rules.h
lib/: CMakeLists.txt  CicleDetector.h  Common.cpp  First.cpp  Following.cpp  PredictionSet.cpp  Rules.cpp  StatusOfRule.h
testGrammars/: QuarkGrammar  TestGrammar  TestGrammar2  TestGrammar3  TestGrammar4  TestGrammar5  TestGrammar6  TestGrammar7  TestGrammar8  TestGrammar9
tools/: CMakeLists.txt  main.cpp
